--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy >= 0.941
+    mypy >= 0.941, < 0.950
     {[common_dep]deps}
 skip_install = true
 commands =
