Avoid pytest 7.2 for now

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,8 @@ deps =
 [testenv]
 commands = pytest {posargs}
 deps =
-    pytest-mypy-plugins >= 1.9.2
+    pytest-mypy-plugins ~= 1.9
+    pytest < 7.2
     {[testenv:mypy]deps}
 
 [testenv:format]
