--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ isolated_build = True
 
 [gh-actions]
 python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
+    '3.8': py38
+    '3.9': py39
+    '3.10': py310
 
 [common_dep]
 deps =
@@ -19,8 +19,7 @@ deps =
 [testenv]
 commands = pytest {posargs}
 deps =
-    pytest-mypy-plugins ~= 1.9
-    pytest < 7.2
+    pytest-mypy-plugins >= 1.10.1
     {[testenv:mypy]deps}
 
 [testenv:format]
@@ -34,7 +33,7 @@ commands =
 
 [testenv:mypy]
 deps =
-    mypy >= 0.941, < 0.950
+    mypy >= 0.982, < 0.990
     {[common_dep]deps}
 skip_install = true
 commands =
