--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38, 39, 310}
+envlist = py{38, 39, 310, 311}
 requires =
     tox >3,<4
     tox-gh-actions
@@ -10,6 +10,7 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
 
 [common_dep]
 deps =
