softprops/action-gh-release -> ncipollo/release-action
In wake of deprecation notice from GitHub, as well as accumulating
issues and PRs, it's time to move to a more maintained action.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,11 @@ jobs:
         check_artifacts: true
 
     - name: Publish draft GitHub release
-      uses: softprops/action-gh-release@v1
+      uses: ncipollo/release-action@v1
       with:
-        fail_on_unmatched_files: true
+        artifacts: "dist/*.whl,dist/*.tar.gz"
+        artifactErrorsFailBuild: true
         draft: true
-        files: |
-          dist/*.whl
-          dist/*.tar.gz
 
     - name: Publish to Test PyPI
       if: >
